--- a/FreeRTOS/Demo/Posix_GCC/Makefile
+++ b/FreeRTOS/Demo/Posix_GCC/Makefile
@@ -73,15 +73,15 @@ else
   CPPFLAGS              += -DTRACE_ON_ENTER=0
 endif
 
-ifeq ($(COVERAGE_TEST),1)
+#ifeq ($(COVERAGE_TEST),1)
   CPPFLAGS              += -DprojCOVERAGE_TEST=1
   CFLAGS                += -Werror
-else
-  CPPFLAGS              += -DprojCOVERAGE_TEST=0
-# Trace library.
-  SOURCE_FILES          += ${FREERTOS_PLUS_DIR}/Source/FreeRTOS-Plus-Trace/kernelports/FreeRTOS/trcKernelPort.c
-  SOURCE_FILES          += $(wildcard ${FREERTOS_PLUS_DIR}/Source/FreeRTOS-Plus-Trace/*.c )
-endif
+#else
+#  CPPFLAGS              += -DprojCOVERAGE_TEST=0
+## Trace library.
+#  SOURCE_FILES          += ${FREERTOS_PLUS_DIR}/Source/FreeRTOS-Plus-Trace/kernelports/FreeRTOS/trcKernelPort.c
+#  SOURCE_FILES          += $(wildcard ${FREERTOS_PLUS_DIR}/Source/FreeRTOS-Plus-Trace/*.c )
+#endif
 
 ifdef PROFILE
   CFLAGS              +=   -pg  -O0
@@ -100,13 +100,13 @@ ifdef SANITIZE_LEAK
   LDFLAGS             +=   -fsanitize=leak
 endif
 
-ifeq ($(USER_DEMO),BLINKY_DEMO)
+#ifeq ($(USER_DEMO),BLINKY_DEMO)
   CPPFLAGS            +=   -DUSER_DEMO=0
-endif
-
-ifeq ($(USER_DEMO),FULL_DEMO)
-  CPPFLAGS            +=   -DUSER_DEMO=1
-endif
+#endif
+#
+#ifeq ($(USER_DEMO),FULL_DEMO)
+#  CPPFLAGS            +=   -DUSER_DEMO=1
+#endif
 
 
 OBJ_FILES = $(SOURCE_FILES:%.c=$(BUILD_DIR)/%.o)
